hphp/test/slow/type_annotation/type_annotation5.php.expectf
Fatal error: Type constant C::T is abstract in %s on line 8
